Fix clipped tag selector
https://37s.fizzy.37signals.com/collections/2/cards/825

--- a/app/assets/stylesheets/cards.css
+++ b/app/assets/stylesheets/cards.css
@@ -68,7 +68,7 @@
     margin-inline-start: calc(-1 * var(--card-padding-inline));
     max-inline-size: 100%;
     min-inline-size: 0;
-    overflow: hidden;
+    overflow: visible;
   }
 
   .card__collection {
